tests/139_duplicate_struct_error.err
pirxc compilation failed: exit status 1
Output: tests/139_duplicate_struct_error.pirx:6:1: type Foo is already declared
Error: exit status 1
