tests/139_duplicate_struct_error.pirx
// Duplicate struct declarations are rejected.
struct Foo {
  x: int;
}

struct Foo {
  y: int;
}

func main(): int {
  return 0;
}
